--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;200;300;400;500;600;700&family=Montserrat:wght@300;400;500;700&family=Mulish:wght@400;700&family=Nunito+Sans:wght@200;300;400;600;800&family=Poppins:wght@100;200;300;400;500;600;700&family=Raleway:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&family=Splash&display=swap"
       rel="stylesheet"
     />
+    <title>Client Master</title>
   </head>
   <body>
     <div id="root"></div>
